syntax = "proto3";

option go_package = "gen-proto/hotel_pb;hotel_pb";

service HotelService {
    rpc GetHotel(GetHotelRequest) returns (GetHotelResponse);
    rpc CreateHotel(CreateHotelRequest) returns (CreateHotelResponse);
    rpc GetAllHotels(GetAllHotelsRequest) returns (GetAllHotelsResponse);
}

message Hotel {
    string id = 1;
    string name = 2;
    string address = 3;
}

message GetHotelRequest {
    string id = 1;
}

message GetHotelResponse {
    Hotel hotel = 1;
}

message CreateHotelRequest {
    string name = 1;
}

message CreateHotelResponse {
}

message GetAllHotelsRequest {
}

message GetAllHotelsResponse {
    repeated Hotel hotels = 1;
}